# traffic-emulator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  vite.config.ts
.github/workflows/: qodana_code_quality.yml
backend/: CMakeLists.txt  Dockerfile  config_dev.yaml  main.cpp
backend/Cars/: Car.h  CarSettings.h  Cars.h
backend/Process/: CreateCars.h  UpdateCars.h  UpdateLights.h
backend/TrafficLight/: Light.h  LightSettings.h  TrafficLight.h  TrafficLights.h
backend/UserSettings/: UserCarSettings.h  UserLightSettings.h  WindowSettings.h
backend/handlers/: cars_handler.h  settings.h
backend/src/Cars/: Car.cpp  Cars.cpp
backend/src/Process/: CreateCars.cpp  UpdateCars.cpp  UpdateLights.cpp
backend/src/TrafficLight/: Light.cpp  TrafficLight.cpp  TrafficLights.cpp
backend/src/UserSettings/: UserCarSettings.cpp  UserLightSettings.cpp  WindowSettings.cpp
frontend/: Dockerfile  package.json
frontend/src/pages/Home/: Home.tsx
frontend/src/pages/Settings/: Settings.tsx
src/components/Drawer/: MainDrawer.tsx
src/pages/: pagesData.tsx
src/pages/Home/: Home.tsx
src/pages/Settings/: Settings.tsx
